bucket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bucket
spec:
  type: ExternalName
  externalName: s3-prod.geddes.rcac.purdue.edu
  ports:
    - port: 443
